# muebleria-bot

./: .env.example  .gitignore  Dockerfile  README.md  WORKSPACE_EXPLICADO.md  docker-compose.yml  plan.md  pyproject.toml  requirements.txt
Contexto app anterior NO ACTUAL/: PRD.md
openclaw-config/: AGENTS.md  openclaw.json
openclaw-config/skills/consultar-casos/: SKILL.md
openclaw-config/skills/cotizacion-muebleria/: SKILL.md
openclaw-config/skills/factura-muebleria/: SKILL.md
openclaw-config/skills/garantia-muebleria/: SKILL.md
openclaw-config/skills/recordatorio-muebleria/: SKILL.md
scripts/: migrate_add_invoice_id.sql  migrate_add_invoice_type.sql  migrate_add_order_tracking.sql  migrate_add_parent_invoice.sql  migrate_delivery_notifications.sql  pg_backup.sh  reset_backend_chat.py  send_to_backend.py
src/: audio.py  bot.py  config.py  database.py  llm.py  main.py  memory.py  ocr.py
src/agent/: graph.py  routing.py  state.py
src/agent/nodes/: agent.py  recall.py  record.py  router.py  tools_executor.py
src/agent/tools/: cases.py  clients.py  invoices.py  orders.py  reminders.py
src/models/: __init__.py  models.py
src/tasks/: celery_app.py  scheduler.py
src/utils/: phone.py
