[project]
name = "asistente-norena"
version = "1.0.0"
description = "Asistente personal para Mueblería Noreña — bot Telegram con LangGraph"
requires-python = ">=3.12"

dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",     # Para recibir archivos (fotos)

    # LLM y agente
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",     # Compatible con OpenRouter (OpenAI-compatible)
    "openai>=1.50.0",              # Client base para OpenRouter
    "tenacity>=8.3.0",             # Retry con exponential backoff

    # Base de datos
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",             # Driver PostgreSQL async
    "psycopg2-binary>=2.9.9",      # Driver PostgreSQL sync para Celery
    "alembic>=1.13.0",

    # Redis
    "redis[hiredis]>=5.0.0",

    # Qdrant
    "qdrant-client>=1.10.0",

    # Cohere (embeddings multilingual + reranker)
    "cohere>=5.10.0",

    # Celery
    "celery[redis]>=5.4.0",
    "celery-types>=0.22.0",        # Tipos para IDEs

    # Configuración
    "pydantic-settings>=2.4.0",
    "pydantic>=2.9.0",

    # Telegram
    "httpx>=0.27.0",               # HTTP client (para llamar a Telegram API)

    # Utilidades
    "phonenumbers>=8.13.0",        # Normalizar teléfonos colombianos
    "python-dateutil>=2.9.0",      # Parsear fechas relativas
    "Pillow>=10.4.0",              # Procesamiento de imágenes
    "pytz>=2024.1",                # Timezones
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",               # TestClient de FastAPI
    "ruff>=0.6.0",                 # Linter + formatter
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]         # Errores, flakes, imports

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["src/db/alembic/*"]
